@@ -1,0 +1,285 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u6771\u4eac\u842c\u8056\u7bc0\u760b\u72c2\u6d3e\u5c0d\uff01\u5996\u602a\u76c2\u862d\u76c6\u821e\u3001\u8d85\u81ea\u7136\u8c93\u7bc0\u3001\u5e02\u6c11\u7bc0\u65e5\u7b49\u4f60\u4f86\u73a9", "description": "\u6771\u4eac\u842c\u8056\u7bc0\u760b\u72c2\u6d3e\u5c0d\uff01\u5996\u602a\u76c2\u862d\u76c6\u821e\u3001\u8d85\u81ea\u7136\u8c93\u7bc0\u3001\u5e02\u6c11\u7bc0\u65e5\u7b49\u4f60\u4f86\u73a9", "url": "https://www.famechos.me/news/\u6771\u4eac\u842c\u8056\u7bc0\u760b\u72c2\u6d3e\u5c0d\uff01\u5996\u602a\u76c2\u862d\u76c6\u821e\u3001\u8d85\u81ea\u7136\u8c93\u7bc0\u3001\u5e02\u6c11\u7bc0\u65e5\u7b49\u4f60\u4f86\u73a9/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-10T16:24:05.413407+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩/"/>
+<meta name="description" content="東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩，體驗東京獨特的萬聖節文化！">
+
+<meta name="keywords" content="東京萬聖節, 萬聖節派對, 妖怪盂蘭盆舞, 超自然貓節, 市民節日, 東京節日, 萬聖節活動, 日本萬聖節">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩/" />
+        <meta property="og:title" content="東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩" />
+        <meta property="og:description" content="東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩" />
+        <meta property="twitter:description" content="東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">Others</p>
+          <p class="news-date">10/10/2024</p>
+        </div>
+	<p>日本的萬聖節與眾不同——畢竟他們有自己的妖怪（yōkai）——東京在10月31日前會出現許多相關活動。你可以在超自然貓節上打扮成貓咪，或是在立川變成妖怪。對於不那麼恐怖的活動，你可以前往遍布首都的許多市民節日。</p>
+<h2>盂蘭盆舞在立川的妖怪慶典</h2>
+<p>參加一個傳統的盂蘭盆舞，但帶有超自然的元素。這個為期三天的節日將在萬聖節前幾周舉行，參與者將變成妖怪並盡情舞蹈。每個人都歡迎盛裝打扮——你想成為河童（Kappa）、天狗（Tengu）還是狐狸（Kitsune）？</p>
+<h2>貓咪的超自然慶典</h2>
+<p>在神樂坂的街道上，期待恐怖的貓咪、武士貓、可愛的貓咪，甚至真實的貓咪。將會有四個主要的遊行，每個遊行約20分鐘。遊行將從神樂坂站附近的下午1:30開始。</p>
+<h2>Experience the Traditional Ikeshoji Temple Ceremony</h2>
+<p>節日的亮點是萬度祓い（10,000燈）儀式，大約3,000人將攜帶裝飾有櫻花的神聖燈籠沿著從池上站到寺廟的大約兩公里路線。</p>
+<h2>江戶川市民節：東京不可錯過的節日盛事</h2>
+<p>在東京，節日盛事不斷。最近，我有幸參加了幾個節日活動，體驗了不同的文化和娛樂。以下是我的經歷。</p>
+<h2>Celebrating Happy-chan's Special Day</h2>
+<p>我遇見了官方節日角色Happy-chan，並與東京最靠近千葉的區的好市民一起狂歡。節日場地有表演、角色秀（據我們所知，涉及一個警察角色）、不同的區域，包括幸福廣場、新鮮廣場、朋友廣場，以及美味節日食品和當地產品。可能還有一輛消防車。</p>
+<h2>Experience the Vibrant Culture of 下町祭</h2>
+<p>緊接鄰近的谷中祭之後的是下町祭（也稱為根津千駄木祭）。主要的節日場地將在根津神社的廣闊場地內。此外，還將在根津和千駄木的傳統“市中心”地區舉行活動、娛樂和攤位。</p>
+<h2>鏑馬馳騁戶山公園</h2>
+<p>也被稱為高田馬場流鏑馬，這是一個觀看流鏑馬的機會，流鏑馬是日本令人印象深刻的武術——馬背上的射箭（從移動的馬背上擊中目標相當困難）。將在戶山公園舉行遊行，從早稻田的穴八幡宮神社到附近的公園。</p>
+<h2>The Yanaka Festival</h2>
+<p>節日包括舞蹈和音樂表演、食品、節日遊戲、集市和印章拉力賽。如果你曾經想知道夏威夷舞團在墓地表演會是什麼樣子，這是你找出答案的機會。</p>
+<h2>市民們的盛事：目黑市民節</h2>
+<p>目黑市民節與目黑秋刀魚祭同期舉行，是一個適合大家參與的歡樂活動。每年秋天，目黑區的居民都會品嚐新鮮的太平洋秋刀魚，購買當地特產，觀賞日本喜劇表演。</p>
+<h2>夜來祭（福袋節）</h2>
+<p>福袋節始於1968年，是池袋站西側四個當地購物區的活動。它已經發展成為該地區最大的活動之一，分為兩部分。節日包括開幕式和大量舞蹈表演。</p>
+<h2>廚具盛宴：河童橋節慶</h2>
+<p>河童橋道具祭是東京首屈一指的廚具街的展示，從刀具到瓷器到逼真的塑膠食物模型。當天，道路將封閉，行人可以自由漫步。</p>
+<h2>慶祝自由之丘的女神節日</h2>
+<p>自由之丘女神節日於1973年在自由之丘站周圍地區舉行。它非常受歡迎，吸引了近50萬名遊客。有葡萄酒和食品攤位，秋季特產，和大量的音樂表演。</p>
+<h2>鐵道的節日</h2>
+<p>日本的鐵道迷非常熱情。全日本都非常重視鐵道，這就是為什麼我們有像新幹線這樣的火車，以及為什麼國土交通省是這個活動的官方組織者。</p>
+<h2>電影節日比谷</h2>
+日比谷電影節將持續一周多，將在東京中城日比谷階梯廣場免費放映電影。將會有大量獲獎電影和短片可供觀賞。所有放映都免費，但需要預約「放鬆區」。<h2>設計觸摸</h2>
+<p>設計觸摸是一個創新的藝術活動，將在東京中城六本木舉行。今年的主題是「編織未來」，活動的重點是通過五感探索藝術和想法。</p>
+<h2>第51號市中心飲料：一樁詭異的生意</h2>
+<p>這個活動適合所有人——無論你是想建立人脈、結識新朋友，還是只是想走出戶外，呼吸新鮮空氣。只要你到達，拿起一個東京便宜貼紙，貼在你的襯衫上，加入樂趣中。</p>
+<h2>電影節在新宿公園</h2>
+<p>秋季的來臨帶來了舒適的天氣，正是觀看電影的最佳時機。尤其是當電影在戶外的大銀幕上免費播放時，更是增添了觀影的樂趣。今年的電影節將舉辦三天，播放三部電影，每場電影播放前約30分鐘舉行座談會，讓觀眾可以更深入地了解電影背後的故事。</p>
+<h2>九夜節和十勝節的狂熱氣氛盡在拉斯加巴</h2>
+<p>來到拉斯加巴，沉浸在印度文化的精彩和輝煌中，參加一年中最神聖的節日之一。這是一個充滿歡樂和喜悅的節日，慶祝善良戰勝邪惡，拉斯加巴充滿了這種能量。在這裡，你可以體驗到九夜節和十勝節的活力，感受到當地的文化氛圍。</p>
+
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Y_OgT6jNbvw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： Tokyo Cheapo</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+        <p class ="related-news">
+          <i class="bi bi-dot"></i>
+          K-pop 偶像「假唱門」再起！你知道他們的現場表演有多少是假唱嗎？
+        </p>
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
