@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:20:36 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:24:37 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -94,5 +94,11 @@
   <description>東京藝妓文化大揭秘！體驗傳統日本的祕密花街</description>
   <category>Others</category>
   <pubDate>Thu, 10 Oct 2024 16:20:36 +0800</pubDate>
+</item><item>
+  <title>東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩</title>
+  <link>https://www.famechos.me/news/東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩/</link>
+  <description>東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:24:37 +0800</pubDate>
 </item></channel>
 </rss>
