@@ -108,4 +108,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩/</ns0:loc>
+    <ns0:lastmod>2024-10-10T16:24:37+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
